<resources>
    <string name="app_name">Hand Cricket</string>
    <string name="category_congratulations">Congratulations!!</string>
    <string name="category_Innings1">Innings 1</string>
    <string name="category_Innings2">Innings 2</string>
    <string name="category_instructions">Instructions</string>
    <string name="Welcome">Welcome!!</string>
    <string name="Text1">An exciting new game to enjoy the thrill of the classic game Hand Cricket using a phone.</string>
    <string name="Ins">Instructions</string>
    <string name="play">Play</string>
    <string name="instructions">Instructions</string>
    <string name="bowling">Bowling</string>
    <string name="batting">Batting</string>
    <string name="start">Start</string>
    <string name="heads_or_tails">Heads or Tails?</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="win">You won the toss!</string>
    <string name="lost">You lost the toss!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="bar">/</string>
    <string name="over">Over# :</string>
    <string name="press">Press</string>
    <string name="ball">Ball# :</string>
    <string name="over_1">Over #1: </string>
    <string name="over_2">Over #2: </string>
    <string name="over_3">Over #3: </string>
    <string name="computer_s_value">Computer\'s Value: </string>
    <string name="player">Player</string>
    <string name="computer">Computer</string>
    <string name="exit">Exit</string>
    <string name="thanks_for_playing">Thanks for Playing!!</string>
    <string name="Ins_1">1) To start the game click on Play</string>
    <string name="Ins_2">2) You\'ll enter the Toss Page</string>
    <string name="Ins_3">3) Choose Heads or Tails</string>
    <string name="Ins_4">4) Click Start</string>
    <string name="Ins_5">5) You\'ll see your result</string>
    <string name="Ins_6">6) If you win the toss you will be allowed to choose to Bat or Bowl, choose and click on play, the game will start</string>
    <string name="Ins_7">7) If you lose the toss you\'ll bowl in the first innings and the game starts immediately</string>
    <string name="Ins_8">8) When the first innings starts on the top you\'ll be able to see what your current status is, i.e, whether you\'re bowling or batting</string>
    <string name="Ins_9">9) You score when the input you give and the computer\'s input are different. The score is exactly equal to the input you give.</string>
    <string name="Ins_10">10) When your input and the computer\'s input match then you lose a wicket</string>
    <string name="Ins_11">11) To give the input click on a number and then click on the button play</string>
    <string name="Ins_12">12) The next innings starts either when 3 overs are completed or 3 wickets are lost</string>
    <string name="Ins_13">13) In the second innings, the game play is reversed, i.e., if you were batting you\'ll now be bowling and vice-versa</string>
    <string name="Ins_14">14) The game ends with both the innings being completed</string>
    <string name="Ins_15">15) The final details are displayed after the game has been completed</string>
    <string name="Ins_16">16) Click exit to return to the main menu</string>
    <string name="credit">Icon made by Pixel perfect from www.flaticon.com</string>
    <string name="batting_or_bowling">Batting or Bowling?</string>
</resources>
