<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/Welcome"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:text="@string/Text1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/instructions"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/Ins"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/play"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/credit"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>