<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BatOrBowl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:text="@string/batting_or_bowling"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <View
        android:layout_width="256dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/bat_or_bowl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp">

        <RadioButton
            android:id="@+id/batting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/batting"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <RadioButton
            android:id="@+id/bowling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/bowling"
            android:textColor="@android:color/black"
            android:textSize="32sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <Button
        android:id="@+id/str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="32sp" />
</LinearLayout>