<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Toss"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:text="@string/heads_or_tails"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <View
        android:layout_width="256dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp">

        <RadioButton
            android:id="@+id/heads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/heads"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <RadioButton
            android:id="@+id/tails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tails"
            android:textColor="@android:color/black"
            android:textSize="32sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/display_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <Button
        android:id="@+id/toss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="2dp"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="32sp" />
</LinearLayout>